# MiseEnPlace

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/plans/: 2026-06-03-adapt-design.md  2026-06-03-cook-plan-design.md  2026-06-03-mep-design.md  2026-06-03-mise-design.md
mep/: __init__.py  adapt.py  classify.py  cli.py  components.py  config.py  cook.py  cookware.py  db.py  errors.py  extract.py  gaps.py  ingest.py  llm.py  nutrition.py  pairing.py  plan.py  scale.py  shopping.py  transcript.py  tui.py  web.py  youtube.py
mise/: __init__.py  adapt.py  cli.py  components.py  config.py  cook.py  db.py  errors.py  extract.py  ingest.py  llm.py  plan.py  transcript.py  youtube.py
tests/: test_mep.py  test_mise.py
