[project]
name = "mise-en-place"
version = "0.2.0"
description = "Extract structured recipes from YouTube cooking videos with Claude, stored in local SQLite."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Avery Clapp", email = "avery.clapp@gmail.com" }]
keywords = ["recipes", "cooking", "youtube", "transcripts", "claude", "cli", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "anthropic>=0.39",
    "youtube-transcript-api>=0.6",
    "google-api-python-client>=2.0",
]

[project.urls]
Homepage = "https://github.com/AveryClapp/MiseEnPlace"
Repository = "https://github.com/AveryClapp/MiseEnPlace"

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = ["pytest>=8.0"]

[project.scripts]
mep = "mep.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mep*"]
